--- a/DevKit/Views/ColorResourceView.xaml
+++ b/DevKit/Views/ColorResourceView.xaml
@@ -2,7 +2,9 @@
     x:Class="DevKit.Views.ColorResourceView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:b="http://schemas.microsoft.com/xaml/behaviors"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:hc="https://handyorg.github.io/handycontrol"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:vm="clr-namespace:DevKit.ViewModels"
     d:DataContext="{d:DesignInstance Type=vm:ColorResourceViewModel}"
@@ -21,5 +23,245 @@
         </Style>
     </UserControl.Resources>
 
-    <Grid />
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="150" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition />
+        </Grid.RowDefinitions>
+
+        <Grid Grid.Row="0" Margin="10">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="180" />
+                <ColumnDefinition />
+            </Grid.ColumnDefinitions>
+
+            <Grid Grid.Column="0">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                </Grid.RowDefinitions>
+
+                <Grid Grid.Row="0">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto" />
+                        <ColumnDefinition />
+                    </Grid.ColumnDefinitions>
+
+                    <Border Grid.Column="0" Style="{StaticResource BorderTipDanger}">
+                        <TextBlock Text="红（R）" />
+                    </Border>
+
+                    <hc:NumericUpDown
+                        Grid.Column="1"
+                        Margin="7,0,0,0"
+                        hc:InfoElement.ShowClearButton="True"
+                        Maximum="255"
+                        Minimum="0"
+                        Style="{StaticResource NumericUpDownPlus}">
+                        <b:Interaction.Triggers>
+                            <b:EventTrigger EventName="ValueChanged">
+                                <b:InvokeCommandAction Command="{Binding ColorRedValueChangedCommand}" CommandParameter="{Binding Text, ElementName=SearchBar}" />
+                            </b:EventTrigger>
+                        </b:Interaction.Triggers>
+                    </hc:NumericUpDown>
+                </Grid>
+
+                <Grid Grid.Row="1" Margin="0,7">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto" />
+                        <ColumnDefinition />
+                    </Grid.ColumnDefinitions>
+
+                    <Border Grid.Column="0" Style="{StaticResource BorderTipSuccess}">
+                        <TextBlock Text="绿（G）" />
+                    </Border>
+
+                    <hc:NumericUpDown
+                        Grid.Column="1"
+                        Margin="7,0,0,0"
+                        hc:InfoElement.ShowClearButton="True"
+                        Maximum="255"
+                        Minimum="0"
+                        Style="{StaticResource NumericUpDownPlus}">
+                        <b:Interaction.Triggers>
+                            <b:EventTrigger EventName="ValueChanged">
+                                <b:InvokeCommandAction Command="{Binding ColorGreenValueChangedCommand}" CommandParameter="{Binding Text, ElementName=SearchBar}" />
+                            </b:EventTrigger>
+                        </b:Interaction.Triggers>
+                    </hc:NumericUpDown>
+                </Grid>
+
+                <Grid Grid.Row="2">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto" />
+                        <ColumnDefinition />
+                    </Grid.ColumnDefinitions>
+
+                    <Border Grid.Column="0" Style="{StaticResource BorderTipPrimary}">
+                        <TextBlock Text="蓝（B）" />
+                    </Border>
+
+                    <hc:NumericUpDown
+                        Grid.Column="1"
+                        Margin="7,0,0,0"
+                        hc:InfoElement.ShowClearButton="True"
+                        Maximum="255"
+                        Minimum="0"
+                        Style="{StaticResource NumericUpDownPlus}">
+                        <b:Interaction.Triggers>
+                            <b:EventTrigger EventName="ValueChanged">
+                                <b:InvokeCommandAction Command="{Binding ColorBlueValueChangedCommand}" CommandParameter="{Binding Text, ElementName=SearchBar}" />
+                            </b:EventTrigger>
+                        </b:Interaction.Triggers>
+                    </hc:NumericUpDown>
+                </Grid>
+            </Grid>
+
+            <Grid Grid.Column="1" Margin="10,0,0,0">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition />
+                </Grid.RowDefinitions>
+
+                <Border Grid.Row="0" Style="{StaticResource BorderTipWarning}">
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition />
+                            <ColumnDefinition Width="Auto" />
+                        </Grid.ColumnDefinitions>
+
+                        <TextBlock Grid.Column="0" Text="透明度（A）" />
+
+                        <TextBlock Grid.Column="1" Text="{Binding Value, ElementName=AlphaSlider, StringFormat={}{0:P0}}" />
+                    </Grid>
+                </Border>
+
+                <Slider
+                    x:Name="AlphaSlider"
+                    Grid.Row="1"
+                    Margin="0,10"
+                    hc:TipElement.StringFormat="P0"
+                    hc:TipElement.Visibility="Collapsed"
+                    IsSnapToTickEnabled="True"
+                    Maximum="1"
+                    Minimum="0"
+                    TickFrequency="0.01">
+                    <b:Interaction.Triggers>
+                        <b:EventTrigger EventName="ValueChanged">
+                            <b:InvokeCommandAction Command="{Binding ValueChangedCommand}" CommandParameter="{Binding Text, ElementName=SearchBar}" />
+                        </b:EventTrigger>
+                    </b:Interaction.Triggers>
+                </Slider>
+
+                <Grid Grid.Row="2" Margin="0,0,0,2">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition />
+                        <ColumnDefinition Width="Auto" />
+                        <ColumnDefinition Width="Auto" />
+                    </Grid.ColumnDefinitions>
+
+                    <Border
+                        Grid.Column="0"
+                        Background="Sienna"
+                        BorderThickness="1"
+                        CornerRadius="5" />
+
+                    <Grid Grid.Column="1" Margin="10,0,0,0">
+                        <Grid.RowDefinitions>
+                            <RowDefinition />
+                            <RowDefinition />
+                        </Grid.RowDefinitions>
+
+                        <hc:TextBox
+                            Grid.Row="0"
+                            VerticalContentAlignment="Center"
+                            BorderThickness="0"
+                            FontWeight="Bold"
+                            IsReadOnly="True"
+                            Text="#FFCCCCCC" />
+
+                        <Button
+                            Grid.Row="1"
+                            BorderThickness="0"
+                            Content="复制颜色值"
+                            Foreground="{DynamicResource PrimaryBrush}" />
+                    </Grid>
+                </Grid>
+            </Grid>
+        </Grid>
+
+        <Grid Grid.Row="1" Margin="10,0">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="250" />
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition />
+            </Grid.ColumnDefinitions>
+
+            <hc:TextBox
+                x:Name="ColorHexValueTextBox"
+                Grid.Column="0"
+                hc:InfoElement.Placeholder="请输入待转换的颜色值，格式如：#000000"
+                hc:InfoElement.ShowClearButton="True" />
+
+            <Button
+                Grid.Column="1"
+                Height="37"
+                Margin="10,0"
+                Command="{Binding ColorHexToRgbCommand}"
+                CommandParameter="{Binding Text, ElementName=ColorHexValueTextBox}"
+                Content="转为RGB"
+                Style="{StaticResource ButtonPrimary}" />
+
+            <Grid Grid.Column="2">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition />
+                    <ColumnDefinition />
+                    <ColumnDefinition />
+                </Grid.ColumnDefinitions>
+
+                <Border
+                    Grid.Column="0"
+                    Margin="0,0,5,0"
+                    Style="{StaticResource BorderTipDanger}">
+                    <TextBlock Text="R：255" />
+                </Border>
+
+                <Border
+                    Grid.Column="1"
+                    Margin="5,0"
+                    Style="{StaticResource BorderTipSuccess}">
+                    <TextBlock Text="G：255" />
+                </Border>
+
+                <Border
+                    Grid.Column="2"
+                    Margin="5,0,0,0"
+                    Style="{StaticResource BorderTipPrimary}">
+                    <TextBlock Text="B：255" />
+                </Border>
+            </Grid>
+        </Grid>
+
+        <ListBox
+            Grid.Row="2"
+            Margin="10"
+            HorizontalAlignment="Stretch"
+            ScrollViewer.CanContentScroll="False"
+            ScrollViewer.VerticalScrollBarVisibility="Hidden">
+
+            <ListBox.ItemTemplate>
+                <DataTemplate>
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition />
+                            <ColumnDefinition />
+                        </Grid.ColumnDefinitions>
+                    </Grid>
+                </DataTemplate>
+            </ListBox.ItemTemplate>
+        </ListBox>
+    </Grid>
 </UserControl>
