--- a/DevKit/Views/GenerateIconView.xaml
+++ b/DevKit/Views/GenerateIconView.xaml
@@ -163,7 +163,7 @@
         <ListBox
             Grid.Row="2"
             Margin="10"
-            ItemsSource="{Binding ImageTypeCollection}"
+            ItemsSource="{Binding ImageTypeItems}"
             Visibility="{Binding IsWindowsIconListBoxVisible}">
 
             <ListBox.ItemTemplate>
@@ -223,7 +223,7 @@
         <ListBox
             Grid.Row="2"
             Margin="10"
-            ItemsSource="{Binding ImageTypeCollection}"
+            ItemsSource="{Binding ImageTypeItems}"
             Visibility="{Binding IsAndroidDrawableListBoxVisible}">
 
             <ListBox.ItemTemplate>
