--- a/DevKit/Views/ColorResourceView.xaml
+++ b/DevKit/Views/ColorResourceView.xaml
@@ -27,6 +27,7 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="150" />
             <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
             <RowDefinition />
         </Grid.RowDefinitions>
 
@@ -184,6 +185,7 @@
                         <hc:TextBox
                             x:Name="ColorHexValueTextBox"
                             Grid.Row="0"
+                            HorizontalContentAlignment="Center"
                             VerticalContentAlignment="Center"
                             BorderThickness="0"
                             FontWeight="Bold"
@@ -218,15 +220,36 @@
 
             <Button
                 Grid.Column="1"
-                Margin="10,0"
+                Margin="10,0,0,0"
                 Command="{Binding ColorHexToRgbCommand}"
                 CommandParameter="{Binding Text, ElementName=InputColorHexValueTextBox}"
                 Content="转为RGB"
                 Style="{StaticResource ButtonPrimary}" />
         </Grid>
 
+        <Grid Grid.Row="2" Margin="10,10,10,0">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition />
+                <ColumnDefinition Width="Auto" />
+            </Grid.ColumnDefinitions>
+
+            <ComboBox
+                x:Name="ColorSchemeComboBox"
+                Grid.Column="0"
+                ItemsSource="{Binding ColorSchemes}"
+                SelectedIndex="0">
+                <b:Interaction.Triggers>
+                    <b:EventTrigger EventName="DropDownClosed">
+                        <b:InvokeCommandAction Command="{Binding ItemSelectedCommand}" CommandParameter="{Binding ElementName=ColorSchemeComboBox}" />
+                    </b:EventTrigger>
+                </b:Interaction.Triggers>
+            </ComboBox>
+
+            <TextBlock Grid.Column="1" Text="{Binding ColorCount, StringFormat=共有颜色：{0} 种}" />
+        </Grid>
+
         <ListBox
-            Grid.Row="2"
+            Grid.Row="3"
             Margin="10"
             HorizontalAlignment="Stretch"
             ScrollViewer.CanContentScroll="False"
