--- a/DevKit/Views/ColorResourceView.xaml
+++ b/DevKit/Views/ColorResourceView.xaml
@@ -256,7 +256,7 @@
             x:Name="TraditionColorListBox"
             Grid.Row="3"
             Margin="10"
-            HorizontalAlignment="Stretch"
+            HorizontalAlignment="Center"
             ItemsSource="{Binding ColorResources}"
             ScrollViewer.CanContentScroll="False"
             ScrollViewer.VerticalScrollBarVisibility="Hidden"
@@ -274,6 +274,7 @@
 
                             <TextBlock
                                 Grid.Row="0"
+                                Margin="0,7,0,0"
                                 HorizontalAlignment="Center"
                                 FontSize="14"
                                 Text="{Binding Name}" />
@@ -282,6 +283,8 @@
                                 Grid.Row="1"
                                 Background="Transparent"
                                 BorderThickness="0"
+                                Command="{Binding DataContext.TraditionColorListBoxItemButtonClickCommand, ElementName=TraditionColorListBox}"
+                                CommandParameter="{Binding Hex}"
                                 Content="{Binding Hex}"
                                 FontSize="14" />
                         </Grid>
@@ -295,6 +298,24 @@
                     <WrapPanel HorizontalAlignment="Stretch" Orientation="Horizontal" />
                 </ItemsPanelTemplate>
             </ListBox.ItemsPanel>
+
+            <ListBox.ItemContainerStyle>
+                <Style TargetType="ListBoxItem">
+                    <Setter Property="Template">
+                        <Setter.Value>
+                            <ControlTemplate TargetType="{x:Type ListBoxItem}">
+                                <Border
+                                    x:Name="ItemContainerBorder"
+                                    Width="129"
+                                    Margin="1"
+                                    CornerRadius="5">
+                                    <ContentPresenter HorizontalAlignment="Stretch" VerticalAlignment="Center" />
+                                </Border>
+                            </ControlTemplate>
+                        </Setter.Value>
+                    </Setter>
+                </Style>
+            </ListBox.ItemContainerStyle>
         </ListBox>
 
         <ListBox
@@ -319,6 +340,7 @@
 
                             <TextBlock
                                 Grid.Row="0"
+                                Margin="0,7,0,0"
                                 HorizontalAlignment="Center"
                                 FontSize="14"
                                 Text="{Binding Name}" />
@@ -327,6 +349,8 @@
                                 Grid.Row="1"
                                 Background="Transparent"
                                 BorderThickness="0"
+                                Command="{Binding DataContext.DimColorListBoxItemButtonClickCommand, ElementName=DimColorListBox}"
+                                CommandParameter="{Binding Hex}"
                                 Content="{Binding Hex}"
                                 FontSize="14" />
                         </Grid>
@@ -340,6 +364,24 @@
                     <WrapPanel HorizontalAlignment="Stretch" Orientation="Horizontal" />
                 </ItemsPanelTemplate>
             </ListBox.ItemsPanel>
+
+            <ListBox.ItemContainerStyle>
+                <Style TargetType="ListBoxItem">
+                    <Setter Property="Template">
+                        <Setter.Value>
+                            <ControlTemplate TargetType="{x:Type ListBoxItem}">
+                                <Border
+                                    x:Name="ItemContainerBorder"
+                                    Width="129"
+                                    Margin="1"
+                                    CornerRadius="5">
+                                    <ContentPresenter HorizontalAlignment="Stretch" VerticalAlignment="Center" />
+                                </Border>
+                            </ControlTemplate>
+                        </Setter.Value>
+                    </Setter>
+                </Style>
+            </ListBox.ItemContainerStyle>
         </ListBox>
 
         <ListBox
