--- a/DevKit/Views/ColorResourceView.xaml
+++ b/DevKit/Views/ColorResourceView.xaml
@@ -403,9 +403,9 @@
 
             <ListBox.ItemTemplate>
                 <DataTemplate>
-                    <Border Width="200" Height="200">
+                    <Border Height="100">
                         <Border.Background>
-                            <LinearGradientBrush StartPoint="0,0" EndPoint="0,1">
+                            <LinearGradientBrush StartPoint="0,1" EndPoint="1,1">
                                 <GradientStop Offset="0" Color="{Binding FirstColor}" />
                                 <GradientStop Offset="0.33" Color="{Binding SecondColor}" />
                                 <GradientStop Offset="0.66" Color="{Binding ThirdColor}" />
@@ -437,7 +437,7 @@
                             <ControlTemplate TargetType="{x:Type ListBoxItem}">
                                 <Border
                                     x:Name="ItemContainerBorder"
-                                    Width="129"
+                                    Width="162"
                                     Margin="1"
                                     CornerRadius="5">
                                     <ContentPresenter HorizontalAlignment="Stretch" VerticalAlignment="Center" />
